# rivus

./: Cargo.toml
rivus-axum/: Cargo.toml
rivus-axum-macro/: Cargo.toml
rivus-axum-macro/src/: lib.rs
rivus-axum-macro/tests/: macro_test.rs
rivus-axum-macro/tests/assets/: en.toml  zh.toml
rivus-axum/src/: code.rs  err.rs  i18n.rs  i18n_middleware.rs  lib.rs  r.rs  result.rs  server.rs
rivus-axum/src/i18n/: i18n.rs  middleware.rs  mod.rs
rivus-axum/src/resp/: err.rs  mod.rs  r.rs
rivus-axum/tests/: r_tests.rs  webserver_test.rs  webserver_tests.rs
rivus-core/: Cargo.toml
rivus-core/src/: Error.rs  code.rs  lib.rs
rivus-core/src/utils/: date_format.rs  mod.rs  uid.rs  yaml.rs
rivus-core/src/yaml/: mod.rs
rivus-logger/: Cargo.toml
rivus-logger/src/: lib.rs
rivus-logger/tests/: logger_tests.rs
