[workspace]
resolver = "3"
members = [
    "rivus-core",
    "rivus-logger",
    "rivus-axum",
    "rivus-axum-macro"
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

# rivus-core
serde_yaml = "0.9.33"
regex = "1.12.2"
dotenvy = "0.15.7"
chrono = "0.4.42"
rand = "0.9.2"

# rivus-axum
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.8", features = ["multipart", "ws"] }
validator = { version = "0.20.0", features = ["derive"] }
toml = "0.9.8"

# rivus-logger
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time", "chrono"] }
tracing-appender = "0.2.4"
