[package]
name = "rivus-axum-macro"
version = "0.3.0"
edition = "2024"
description = "rivus axum macro"
license = "Apache-2.0"
repository = "https://github.com/uporm/rivus"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
glob = "0.3.3"
toml = "0.8.23"

[dev-dependencies]
rivus-axum = { path = "../rivus-axum" }
ctor = "0.6.3"
