[package]
name = "rivus-axum"
version = "0.2.0"
edition = "2024"
description = "基于 Axum 的 Web 服务基础"
license = "Apache-2.0"

[dependencies]

tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
toml = { workspace = true }
reqwest = "0.13.0-rc.1"