[package]
name = "rivus-core"
version = "0.4.0"
edition = "2024"
description = "rivus tools"
license = "Apache-2.0"
repository = "https://github.com/uporm/rivus"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
dotenvy = { workspace = true }