[package]
name = "rivus-logger"
version = "0.3.0"
edition = "2024"
description = "基于 tracing 的日志与链路追踪封装"
license = "Apache-2.0"
repository = "https://github.com/uporm/rivus"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
log = { workspace = true }
